--- a/de/trans/trLigaturen2.dita
+++ b/de/trans/trLigaturen2.dita
@@ -3,7 +3,7 @@
 <topic id="Ligaturen">
   <title>Ligaturen</title>
   <body>
-    <p>
+    
 <table id="table_h53_3gm_gz">
 <tgroup cols="5">
           <colspec colnum="1" colname="col1"/>
@@ -21,7 +21,7 @@
             </row>
           </thead>
           <tbody>
-            <row>
+            <row product="ruleset">
               <entry><image href="images/font_0114.png" height="31" width="29" id="image_i53_3gm_gz"
                 /></entry>
               <entry>&#x00C6;<term><text>hex: &amp;#x00C6;</text></term></entry>
@@ -31,7 +31,7 @@
                   realisiert.</p></entry>
               
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0010.png" height="27" width="20"
                   id="image_j53_3gm_gz"/><image href="images/font_0035.png" height="25" width="20"
                   id="image_k53_3gm_gz"/><image href="images/font_0064.png" height="33" width="28"
@@ -43,35 +43,35 @@
               <entry>siehe: <xref href="#Ligaturen/vLigatur" format="dita">vokalische
                 Ligatur</xref></entry>
             </row>
-            <row>
+            <row product="ruleset">
               <entry/>
               <entry>AV</entry>
               <entry>Ꜹ<term><text>hex: &amp;#xA738;</text></term></entry>
               <entry>Ꜹ<term><text>hex: &amp;#xA738;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry/>
               <entry>av</entry>
               <entry>ꜹ<term><text>hex: &amp;#xA739;</text></term></entry>
               <entry>ꜹ<term><text>hex: &amp;#xA739;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry/>
               <entry>AY</entry>
               <entry>Ꜽ<term><text>hex: &amp;#xA73C;</text></term></entry>
               <entry>Ꜽ<term><text>hex: &amp;#xA73C;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry/>
               <entry>ay</entry>
               <entry>ꜽ<term><text>hex: &amp;#xA73D;</text></term></entry>
               <entry>ꜽ<term><text>hex: &amp;#xA73D;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0129.png" height="23" width="20"
                   id="image_n53_3gm_gz"/><image href="images/font_0019.png" height="26" width="24"
                   id="image_o53_3gm_gz"/><image href="images/font_0099.png" height="27" width="24"
@@ -84,49 +84,49 @@
                   format="pdf" scope="external">MUFI character recommendation (Version 4.0; 22
                   Dezember 2015)</xref></entry>
             </row>
-            <row>
+            <row product="ruleset">
               <entry/>
               <entry>et</entry>
               <entry>🙰<term><text>hex: &amp;#x1F670;</text></term></entry>
               <entry>🙰<term><text>hex: &amp;#x1F670;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry/>
               <entry>ff</entry>
               <entry>ﬀ<term><text>hex: &amp;#xFB00;</text></term></entry>
               <entry>ﬀ<term><text>hex: &amp;#xFB00;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry/>
               <entry>ffi</entry>
               <entry>ﬃ<term><text>hex: &amp;#xFB03;</text></term></entry>
               <entry>ﬃ<term><text>hex: &amp;#xFB03;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry/>
               <entry>ffl</entry>
               <entry>ﬄ<term><text>hex: &amp;#xFB04;</text></term></entry>
               <entry>ﬄ<term><text>hex: &amp;#xFB04;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry/>
               <entry>fl</entry>
               <entry>ﬂ<term><text>hex: &amp;#xFB02;</text></term></entry>
               <entry>ﬂ<term><text>hex: &amp;#xFB02;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry/>
               <entry>fi</entry>
               <entry>ﬁ<term><text>hex: &amp;#xFB01;</text></term></entry>
               <entry>ﬁ<term><text>hex: &amp;#xFB01;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0033.png" height="22" width="30"
                   id="image_q53_3gm_gz"/></entry>
               <entry>&#x0152;<term><text>hex: &amp;#x0152;</text></term></entry>
@@ -135,7 +135,7 @@
               <entry>siehe: <xref href="#Ligaturen/vLigatur" format="dita">vokalische
                 Ligatur</xref></entry>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0117.png" height="20" width="22"
                   id="image_r53_3gm_gz"/><image href="images/font_0121.png" height="27" width="24"
                   id="image_s53_3gm_gz"/></entry>
@@ -145,7 +145,7 @@
               <entry>siehe: <xref href="#Ligaturen/vLigatur" format="dita">vokalische
                 Ligatur</xref></entry>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0004.png" height="40" width="20"
                   id="image_u53_3gm_gz"/><image href="images/font_0008.png" height="43" width="20"
                   id="image_v53_3gm_gz"/><image href="images/font_0088.png" height="39" width="29"
@@ -156,23 +156,23 @@
               <entry>ß</entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry><image href="images/font_0098.png" height="42" width="20" id="image_t53_3gm_gz"
                 /></entry>
-              <entry>&#x017F;z <term><text>hex: &amp;#x017F;z </text></term></entry>
-              <entry>&#x017F;z <term><text>hex: &amp;#x017F;z </text></term></entry>
-              <entry>&#x017F;z <term><text>hex: &amp;#x017F;z </text></term></entry>
+              <entry>&#x017F;z<term><text>hex: &amp;#x017F;z </text></term></entry>
+              <entry>&#x017F;z<term><text>hex: &amp;#x017F;z </text></term></entry>
+              <entry>&#x017F;z<term><text>hex: &amp;#x017F;z </text></term></entry>
               <entry outputclass="description">Es handelt sich nicht um eine Ligatur.</entry>
             </row>
-            <row>
+            <row product="ruleset">
               <entry><image href="images/font_0135.png" height="41" width="29" id="image_x53_3gm_gz"
                 /></entry>
               <entry>ss </entry>
-              <entry>&#x017F;s <term><text>hex: &amp;#x017F;s </text></term></entry>
-              <entry>&#x017F;s <term><text>hex: &amp;#x017F;s </text></term></entry>
+              <entry>&#x017F;s<term><text>hex: &amp;#x017F;s </text></term></entry>
+              <entry>&#x017F;s<term><text>hex: &amp;#x017F;s </text></term></entry>
               <entry outputclass="description">Es handelt sich nicht um eine Ligatur. </entry>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0115.png" height="27" width="20"
                   id="image_y53_3gm_gz"/><image href="images/font_0065.png" height="31" width="20"
                   id="image_z53_3gm_gz"/></entry>
@@ -181,7 +181,7 @@
               <entry>&#x017F;p<term><text>hex: &amp;#x017F;p</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0093.png" height="29" width="20"
                   id="image_av3_3gm_gz"/><image href="images/font_0069.png" height="34" width="25"
                   id="image_bv3_3gm_gz"/></entry>
@@ -190,7 +190,7 @@
               <entry>&#xFB06;<term><text>hex: &amp;#xFB06;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry><image href="images/font_0076.png" height="36" width="19" id="image_dv3_3gm_gz"
                   /><image href="images/font_0085.png" height="35" width="22" id="image_cv3_3gm_gz"
                 /></entry>
@@ -199,7 +199,7 @@
               <entry>&#xFB05;<term><text>hex: &amp;#xFB05;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry/>
               <entry>TZ</entry>
               <entry>Ꜩ<term><text>hex: &amp;#xA728;</text></term></entry>
@@ -211,7 +211,7 @@
                 format="pdf" scope="external">MUFI character recommendation (Version 4.0; 22
                 Dezember 2015)</xref></entry>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0037.png" height="43" width="20"
                   id="image_ev3_3gm_gz"/><image href="images/font_0075.png" height="42" width="21"
                   id="image_fv3_3gm_gz"/><image href="images/font_0086.png" height="43" width="23"
@@ -226,7 +226,7 @@
                   format="pdf" scope="external">MUFI character recommendation (Version 4.0; 22
                   Dezember 2015)</xref></entry>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0080.png" height="24" width="29"
                   id="image_hv3_3gm_gz"/></entry>
               <entry>jtzo</entry>
@@ -239,7 +239,7 @@
                 format="pdf" scope="external">MUFI character recommendation (Version 4.0; 22
                 Dezember 2015)</xref></entry>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0028.png" height="24" width="35"
                   id="image_iv3_3gm_gz"/></entry>
               <entry>etc.</entry>
@@ -247,7 +247,7 @@
               <entry>&#xA75B;tc.<term><text>hex: &amp;#xA75B;tc.</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0062.png" height="23" width="25"
                   id="image_jv3_3gm_gz"/><image href="images/font_0007.png" height="24" width="26"
                   id="image_kv3_3gm_gz"/></entry>
@@ -256,7 +256,7 @@
               <entry>&#xA75B;c.<term><text>hex: &amp;#xA75B;c.</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0123.png" height="45" width="20"
                   id="image_qvr_5fm_gz"/></entry>
               <entry>ij</entry>
@@ -264,21 +264,21 @@
               <entry>&#x0133;<term><text>hex: &amp;#x0133;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry/>
               <entry>VY</entry>
               <entry>Ꝡ<term><text>hex: &amp;#xA760;</text></term></entry>
               <entry>Ꝡ<term><text>hex: &amp;#xA760;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry/>
               <entry>vy</entry>
               <entry>ꝡ<term><text>hex: &amp;#xA761;</text></term></entry>
               <entry>ꝡ<term><text>hex: &amp;#xA761;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0119.png" height="20" width="39"
                   id="image_lv3_3gm_gz"/></entry>
               <entry>&#x0026;c<term><text>hex: &amp;#x0026;c</text></term></entry>
@@ -286,7 +286,7 @@
               <entry>&#x0026;c<term><text>hex: &amp;#x0026;c</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0047.png" height="23" width="35"
                   id="image_mv3_3gm_gz"/></entry>
               <entry>&#x0026;&#x00E7;<term><text>hex: &amp;#x0026;&amp;#x00E7;</text></term></entry>
@@ -294,7 +294,7 @@
               <entry>&#x0026;&#x00E7;<term><text>hex: &amp;#x0026;&amp;#x00E7;</text></term></entry>
               <entry/>
             </row>
-            <row>
+            <row product="ruleset">
               <entry dir="ltr"><image href="images/font_0100.png" height="25" width="22"
                   id="image_nv3_3gm_gz"/><image href="images/font_0072.png" height="24" width="22"
                   id="image_ov3_3gm_gz"/><image href="images/font_0118.png" height="21" width="22"
@@ -309,6 +309,6 @@
           </tbody>
         </tgroup>
 </table>
-</p>
+
   </body>
 </topic>
